# FastAPI-Microservices-Store

./: main.py  pyproject.toml  requirements.txt  update.py
