[tool.poetry]
name = "fastapi-microservices-store"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
redis-om = "^0.1.0"
requests = "^2.28.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
